--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   hive_flutter: ^1.1.0
   provider: ^6.1.2
   intl_phone_field: ^3.2.0
+  firebase_auth: ^5.0.0
+  firebase_core: ^3.0.0
+  firebase_database: ^11.0.0
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +77,7 @@ flutter:
      - assets/images/service/
      - assets/images/
      - assets/images/flags/
+     - assets/images/company_logos/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
